--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{% static 'css/flatpickr.min.css' %}">
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">--->
         <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
-        <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+        <script src="{% static 'js/htmx.min.js' %}"></script>
         <script src="{% static 'js/flatpickr.min.js' %}"></script>
 		{% tailwind_css %}
         <script src="{% static 'js/chart.js' %}"></script>
