--- a/devices/templates/devices/device_list.html
+++ b/devices/templates/devices/device_list.html
@@ -211,4 +211,5 @@ window.toggleTypeFilter = DeviceManager.toggleTypeFilter.bind(DeviceManager);
 window.toggleStatusFilter = DeviceManager.toggleStatusFilter.bind(DeviceManager);
 window.resetFilters = DeviceManager.resetFilters.bind(DeviceManager);
 window.toggleSorting = DeviceManager.toggleSorting.bind(DeviceManager);
-</script>{% endblock content %} 
+</script>
+{% endblock content %} 
